# adsoda-rust

./: .gitignore  Cargo.toml
oldjs/adsoda-pdf/src/: solid.js
src/: README.md  blop.rs  main.rs
src/adsoda/: astuces  bases.rs  face.rs  group.rs  mod.rs  solid.rs  space.rs
src/src/: halfspace.js
