[package]
name = "adsoda_rust"
version = "0.1.0"
authors = ["Jeff Bigot"]
edition = "2021"

[dependencies]
memoize = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colog = "1.3.0"
log = "0.4"
approx = "0.5"
tree-ds = { version = "0.2", features = ["auto_id", "serde"]}



[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde", # for serialization
]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
